# LifequestDesktop

./: CMakeLists.txt  LICENSE.md  README.md  data.db  database.cpp  database.h  gui.h  main.cpp  style.qss  version.cpp  version.h
include/: database.h  gui.h  player.h  quest.h
src/: database.cpp  gui.cpp  main.cpp  player.cpp  quest.cpp
